# zkosssssss

./: Cargo.toml  rust-toolchain.toml
docs/: end_to_end.md  overview.md
wrapper/: Cargo.toml
wrapper/src/: lib.rs  main.rs
wrapper/src/circuits/: compression.rs  risc_wrapper.rs
wrapper/src/gpu/: risc_wrapper.rs  snark.rs
wrapper/src/inner_verifiers/: mod.rs
wrapper/src/inner_verifiers/blake_delegation/: mod.rs  skeleton.rs
wrapper/src/inner_verifiers/blake_delegation/imports/: circuit_quotient.rs
wrapper/src/inner_verifiers/shared/: skeleton_impl.rs  verify_impl.rs
wrapper/src/inner_verifiers/unified_reduced/: mod.rs  skeleton.rs
wrapper/src/inner_verifiers/unified_reduced/imports/: circuit_quotient.rs
wrapper/src/tests/: blake2s_tests.rs  mod.rs  risc_wrapper_tests.rs  size_estimator.rs
wrapper/src/transcript/: mod.rs
wrapper/src/wrapper_utils/: prover_structs.rs  verifier_traits.rs
wrapper/testing_data/: compression_proof_100sb  compression_proof_80sb  compression_vk_100sb  compression_vk_80sb  risc_app.text  risc_wrapper_vk_100sb  risc_wrapper_vk_80sb  snark_wrapper_proof_100sb  snark_wrapper_proof_80sb  snark_wrapper_vk_100sb  snark_wrapper_vk_80sb
wrapper/testing_data/size_estimator_outputs/: wrapper_cols130_reps125_FAILED.txt  wrapper_cols134_reps125_FAILED.txt  wrapper_cols135_reps125_FAILED.txt  wrapper_cols250_reps32_FAILED.txt  wrapper_cols250_reps48_FAILED.txt  wrapper_cols250_reps52_FAILED.txt  wrapper_cols250_reps54_FAILED.txt  wrapper_cols250_reps55_FAILED.txt
wrapper_generator/: Cargo.toml
wrapper_generator/src/: main.rs  mersenne_wrapper.rs
